Updated the example range to use a number type as the default instead of a string

--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
         "id": "example_range",
         "label": "Example Range",
         "type": "range",
-        "default": "5",
+        "default": 5,
         "attrs": {
             "min": 1,
             "max": 10,
