Cleaned code up a bit and added support for custom parameter config types

--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
         "id": "example-checkbox",
         "label": "Example Checkbox",
         "type": "checkbox",
+        "tooltip": "Example tooltip",
         "default": true
     },
     {
