Added a file upload input. Cannot be serialised/deserialised

--- a/config.json
+++ b/config.json
@@ -39,6 +39,14 @@
         "type": "button"
     },
     {
+        "id": "example-file",
+        "text": "Example File",
+        "type": "file",
+        "attrs": {
+            "accept": "image/*"
+        }
+    },
+    {
         "id": "example-text",
         "label": "Example Text",
         "type": "text",
