WIP: Made .ts files for most of the code. Rewriting the config parser to handle typed configs

--- a/public/config.json
+++ b/public/config.json
@@ -1,55 +1,55 @@
 [
     {
         "id": "example-checkbox",
-        "label": "Example Checkbox",
         "type": "checkbox",
+        "label": "Example Checkbox",
         "tooltip": "Example tooltip",
         "default": true
     },
     {
         "id": "example-range",
-        "label": "Example Range",
         "type": "range",
+        "label": "Example Range",
         "default": 5,
         "attrs": {
-            "min": 1,
-            "max": 10,
-            "step": 0.5
+            "min": "1",
+            "max": "10",
+            "step": "0.5"
         }
     },
     {
         "id": "example-number",
-        "label": "Example Number",
         "type": "number",
+        "label": "Example Number",
         "default": 5,
         "attrs": {
-            "min": 1,
-            "max": 10
+            "min": "1",
+            "max": "10"
         }
     },
     {
         "id": "example-colour",
-        "label": "Example Colour",
         "type": "color",
+        "label": "Example Colour",
         "default": "FF5A5F"
     },
     {
         "id": "example-button",
-        "text": "Example Button",
-        "type": "button"
+        "type": "button",
+        "text": "Example Button"
     },
     {
         "id": "example-file",
-        "text": "Example File",
         "type": "file",
+        "text": "Example File",
         "attrs": {
             "accept": "image/*"
         }
     },
     {
         "id": "example-text",
-        "label": "Example Text",
         "type": "text",
+        "label": "Example Text",
         "default": "Hello",
         "attrs": {
             "placeholder": "World!"
@@ -57,14 +57,14 @@
     },
     {
         "id": "example-datetime",
-        "label": "Example Date Time",
         "type": "datetime-local",
+        "label": "Example Date Time",
         "default": "2018-06-14T10:03"
     },
     {
         "id": "example-select",
-        "label": "Example Select",
         "type": "select",
+        "label": "Example Select",
         "default": "bar",
         "options": [
             "foo",
@@ -75,8 +75,8 @@
     },
     {
         "id": "example-collection",
-        "label": "Example Collection",
         "type": "collection",
+        "label": "Example Collection",
         "expandable": true,
         "fields": [
             {
@@ -84,9 +84,9 @@
                 "type": "range",
                 "initial": 2,
                 "attrs": {
-                    "min": 0,
-                    "max": 4,
-                    "step": 1
+                    "min": "0",
+                    "max": "4",
+                    "step": "1"
                 }
             },
             {
