--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "uuid-random": "^1.3.2",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
