--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "packageManager": "yarn@1.22.19",
   "author": "eniallator",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "uuid-random": "^1.3.2",
@@ -18,10 +19,12 @@
     "ts-loader": "^9.4.4",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^6.1.1"
   },
   "scripts": {
     "start": "node app",
+    "build": "webpack",
     "lint": "eslint 'src/**/*.ts'",
     "typecheck": "tsc --noEmit",
     "findissues": "yarn typecheck && yarn lint"
