--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "type": "module",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "uuid-random": "^1.3.2",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.20",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.22.15",
+    "babel-loader": "^9.1.3",
     "browser-sync": "^2.29.3",
     "bs-fullscreen-message": "^1.1.0",
     "strip-ansi": "^7.1.0",
@@ -25,6 +30,7 @@
   "scripts": {
     "start": "node app",
     "build": "webpack",
+    "watch": "webpack --watch",
     "lint": "eslint 'src/**/*.ts'",
     "typecheck": "tsc --noEmit",
     "findissues": "yarn typecheck && yarn lint"
