--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -21,7 +21,7 @@ jobs:
         run: yarn
       - name: Build bundle
         run: yarn build
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-pages-artifact@v2
         if: always()
         with:
           name: dist
