--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "browser-sync-webpack-plugin": "^2.3.0",
+    "gh-pages": "^6.0.0",
     "uuid-random": "^1.3.2",
     "yarn": "^1.22.19"
   },
@@ -33,6 +34,7 @@
     "watch": "webpack --watch",
     "lint": "eslint 'src/**/*.ts'",
     "typecheck": "tsc --noEmit",
-    "findissues": "yarn typecheck && yarn lint"
+    "findissues": "yarn typecheck && yarn lint",
+    "deploy": "gh-pages -d public"
   }
 }
