--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -13,4 +13,8 @@ jobs:
       - name: Build bundle
         run: yarn build
       - name: Deploy
-        run: yarn deploy
+        run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          yarn deploy -u "github-actions-bot <support+actions@github.com>"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
