Renamed Components to AnyComponents

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["fontawesome", "Fonticons", "Timeable"]
+  "cSpell.words": ["Browsersync", "fontawesome", "Fonticons", "Timeable"]
 }
