--- a/package.json
+++ b/package.json
@@ -8,28 +8,37 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "gh-pages": "^6.0.0",
-    "yarn": "^1.22.19"
+    "gh-pages": "^6.1.1",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
     "@babel/preset-typescript": "^7.23.3",
+    "@types/eslint": "^8.56.5",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
     "babel-loader": "^9.1.3",
     "browser-sync": "^3.0.2",
     "browser-sync-webpack-plugin": "^2.3.0",
     "bs-fullscreen-message": "^1.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
     "strip-ansi": "^7.1.0",
-    "ts-loader": "^9.4.4",
-    "typescript": "^5.3.3",
-    "webpack": "^5.89.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.2",
+    "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^6.1.1"
+    "webpack-dev-middleware": "^7.0.0"
   },
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "lint": "eslint 'src/**/*.ts'",
+    "lint": "eslint src/**/*.ts",
     "typecheck": "tsc --noEmit",
     "findissues": "yarn typecheck && yarn lint",
     "deploy": "gh-pages -d public"
