Workspaceified the whole project. Getting ready for publishing packages

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -8,6 +8,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
+      - name: Setup yarn
+        run: yarn set version from sources
       - name: Install dependencies
         run: yarn
       - name: Build bundle
@@ -15,6 +17,6 @@ jobs:
       - name: Deploy
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          yarn deploy -u "github-actions-bot <support+actions@github.com>"
+          yarn app deploy -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
