--- a/package.json
+++ b/package.json
@@ -1,46 +1,23 @@
 {
-  "name": "web-animation-template",
-  "description": "Web animation template",
-  "version": "0.0.1",
-  "main": "app.js",
-  "packageManager": "yarn@1.22.19",
   "author": "eniallator",
+  "description": "Web art packages",
   "license": "MIT",
+  "name": "@web-art/root",
+  "packageManager": "yarn@3.8.2",
+  "private": true,
   "type": "module",
-  "dependencies": {
-    "gh-pages": "^6.1.1",
-    "yarn": "^1.22.21"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/preset-env": "^7.24.0",
-    "@babel/preset-typescript": "^7.23.3",
-    "@types/eslint": "^8.56.5",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "babel-loader": "^9.1.3",
-    "browser-sync": "^3.0.2",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "bs-fullscreen-message": "^1.1.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.5",
-    "strip-ansi": "^7.1.0",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.4.2",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^7.0.0"
-  },
+  "version": "1.0.0",
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch",
-    "lint": "eslint src/**/*.ts",
-    "typecheck": "tsc --noEmit",
-    "findissues": "yarn typecheck && yarn lint",
-    "deploy": "gh-pages -d public"
+    "app": "yarn workspace @web-art/app",
+    "core": "yarn workspace @web-art/core",
+    "conf": "yarn workspace @web-art/config-parser",
+    "linalg": "yarn workspace @web-art/linear-algebra",
+    "build": "yarn workspaces foreach --verbose --parallel --topological --exclude @web-art/root run build",
+    "typecheck": "yarn workspaces foreach --verbose --parallel --topological --exclude @web-art/root run typecheck",
+    "lint": "yarn workspaces foreach --verbose --parallel --topological --exclude @web-art/root run lint",
+    "findissues": "yarn workspaces foreach --verbose --parallel --topological --exclude @web-art/root run findissues"
   }
 }
