--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -4,12 +4,12 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 22.2.0
       - name: Setup yarn
-        run: yarn set version from sources
+        run: yarn set version 3.8.2
       - name: Install dependencies
         run: yarn
       - name: Build bundle
