--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,6 +10,9 @@
   "types": "dist/index.d.ts",
   "version": "1.0.0",
   "dependencies": {
+    "@web-art/config-parser": "^workspace:",
+    "@web-art/core": "^workspace:",
+    "@web-art/linear-algebra": "^workspace:",
     "gh-pages": "^6.1.1"
   },
   "devDependencies": {
@@ -19,9 +22,6 @@
     "@types/eslint": "^8.56.5",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
-    "@web-art/config-parser": "^workspace:",
-    "@web-art/core": "^workspace:",
-    "@web-art/linear-algebra": "^workspace:",
     "babel-loader": "^9.1.3",
     "browser-sync": "^3.0.2",
     "browser-sync-webpack-plugin": "^2.3.0",
@@ -45,6 +45,6 @@
     "lint": "eslint src/**/*.ts",
     "typecheck": "tsc --noEmit",
     "findissues": "yarn typecheck && yarn lint",
-    "deploy": "gh-pages -d packages/app/public"
+    "deploy": "gh-pages -d public"
   }
 }
