--- a/packages/config-parser/package.json
+++ b/packages/config-parser/package.json
@@ -9,11 +9,13 @@
   "type": "module",
   "types": "dist/index.d.ts",
   "version": "1.0.0",
+  "dependencies": {
+    "@web-art/core": "^workspace:"
+  },
   "devDependencies": {
     "@types/eslint": "^8.56.5",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
-    "@web-art/core": "^workspace:",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
