--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,7 @@
     "@typescript-eslint/no-inferrable-types": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
-      { "varsIgnorePattern": "^_|^[iI]gnored", "argsIgnorePattern": "^_" }
+      { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }
     ]
   }
 }
