--- a/package.json
+++ b/package.json
@@ -10,6 +10,20 @@
   "workspaces": [
     "packages/*"
   ],
+  "devDependencies": {
+    "@eslint/compat": "^1.1.0",
+    "@eslint/js": "^9.5.0",
+    "@types/eslint__js": "^8.42.3",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "eslint": "^9.5.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.13.1"
+  },
   "scripts": {
     "app": "yarn workspace @web-art/app",
     "core": "yarn workspace @web-art/core",
