--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,29 +20,29 @@
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@types/eslint": "^8.56.10",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
     "babel-loader": "^9.1.3",
     "browser-sync": "^3.0.2",
     "browser-sync-webpack-plugin": "^2.3.0",
     "bs-fullscreen-message": "^1.1.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.1",
+    "prettier": "^3.3.2",
     "strip-ansi": "^7.1.0",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.5",
-    "webpack": "^5.91.0",
+    "typescript": "^5.5.2",
+    "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-middleware": "^7.2.1"
   },
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint ./src/**/*.ts",
     "typecheck": "tsc --noEmit",
     "findissues": "yarn typecheck && yarn lint",
     "deploy": "gh-pages -d public"
