--- a/packages/linear-algebra/package.json
+++ b/packages/linear-algebra/package.json
@@ -14,22 +14,22 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.1",
+    "prettier": "^3.3.2",
     "strip-ansi": "^7.1.0",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.2"
   },
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint ./src/**/*.ts",
     "findissues": "yarn typecheck && yarn lint"
   }
 }
