--- a/tsconfig.common.json
+++ b/tsconfig.common.json
@@ -1,4 +1,5 @@
 {
+  "include": ["./packages/*/src"],
   "compilerOptions": {
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
@@ -12,6 +13,7 @@
     "moduleResolution": "Bundler",
     "noErrorTruncation": true,
     "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
