WIP: Rewrote config parser. Got it building/typechecking/linting. Added deep-guards

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,6 +13,7 @@
     "@web-art/config-parser": "^workspace:",
     "@web-art/core": "^workspace:",
     "@web-art/linear-algebra": "^workspace:",
+    "deep-guards": "^1.0.5",
     "gh-pages": "^6.1.1"
   },
   "devDependencies": {
