--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,5 +28,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint ./src/**/*.ts",
     "findissues": "yarn typecheck && yarn lint"
+  },
+  "dependencies": {
+    "deep-guards": "^1.0.5"
   }
 }
