Made the bundle minified in prod

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -11,6 +11,8 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Build bundle
+        env:
+          NODE_ENV: production
         run: yarn build
       - name: Deploy
         run: |
