--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,7 +14,8 @@
     "@web-art/core": "^workspace:",
     "@web-art/linear-algebra": "^workspace:",
     "deep-guards": "^1.0.5",
-    "gh-pages": "6.3.0"
+    "gh-pages": "6.3.0",
+    "terser-webpack-plugin": "^5.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.26.7",
