--- a/packages/config-parser/package.json
+++ b/packages/config-parser/package.json
@@ -31,6 +31,7 @@
     "build": "tsc",
     "typecheck": "tsc --noEmit",
     "lint": "eslint ./src/**/*.ts",
-    "findissues": "yarn typecheck && yarn lint"
+    "findissues": "yarn typecheck && yarn lint",
+    "prepublish": "yarn build && yarn typecheck && yarn lint"
   }
 }
