--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Build bundle
         env:
           NODE_ENV: production
-        run: yarn build
+        run: yarn prepublish
       - name: Deploy
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
