--- a/packages/config-parser/tsconfig.json
+++ b/packages/config-parser/tsconfig.json
@@ -1,10 +1,9 @@
 {
-  "extends": "../../tsconfig.common.json",
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
-    "outDir": "./dist",
-    "rootDir": "./src"
+    "outDir": "./dist"
   },
-  "exclude": ["dist"],
+  "exclude": ["dist", "**/*.test.ts"],
+  "extends": "../../tsconfig.common.json",
   "include": ["src"]
 }
