--- a/packages/linear-algebra/tsconfig.json
+++ b/packages/linear-algebra/tsconfig.json
@@ -1,9 +1,8 @@
 {
-  "extends": "../../tsconfig.common.json",
   "compilerOptions": {
-    "baseUrl": ".",
     "outDir": "./dist"
   },
-  "exclude": ["dist"],
+  "exclude": ["dist", "**/*.test.ts"],
+  "extends": "../../tsconfig.common.json",
   "include": ["src"]
 }
