--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -17,19 +17,19 @@
     "deep-guards": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-typescript": "^7.27.1",
-    "@stylistic/eslint-plugin": "^5.3.1",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@stylistic/eslint-plugin": "^5.5.0",
     "@types/eslint": "^9.6.1",
     "@types/gh-pages": "^6.1.0",
-    "@typescript-eslint/eslint-plugin": "^8.44.0",
-    "@typescript-eslint/parser": "^8.44.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
     "babel-loader": "^10.0.0",
     "browser-sync": "^3.0.4",
     "browser-sync-webpack-plugin": "^2.4.0",
     "bs-fullscreen-message": "^1.1.0",
-    "eslint": "^9.35.0",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.32.0",
@@ -39,18 +39,18 @@
     "strip-ansi": "^7.1.2",
     "terser-webpack-plugin": "^5.3.14",
     "ts-loader": "^9.5.4",
-    "typescript": "^5.9.2",
-    "vitest": "^3.2.4",
-    "webpack": "^5.101.3",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.9",
+    "webpack": "^5.102.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-middleware": "^7.4.3"
+    "webpack-dev-middleware": "^7.4.5"
   },
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
     "typecheck": "tsc --noEmit",
     "lint": "eslint ./src/**/*.ts",
-    "test": "vitest run --passWithNoTests",
+    "test": "vitest run --passWithNoTests --max-workers 1 --reporter verbose",
     "findissues": "yarn typecheck && yarn lint",
     "prepublish": "yarn build && yarn typecheck && yarn lint",
     "deploy": "gh-pages -d public"
