--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -13,7 +13,15 @@ jobs:
       - name: Build bundle
         env:
           NODE_ENV: production
-        run: yarn prepublish
+        run: yarn build
+      - name: Finding Issues
+        env:
+          NODE_ENV: production
+        run: yarn findissues
+      - name: Testing
+        env:
+          NODE_ENV: production
+        run: yarn test
       - name: Deploy
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
