--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "@eslint/js": "^9.39.1",
     "@stylistic/eslint-plugin": "^5.5.0",
     "@types/eslint__js": "^9.14.0",
-    "@typescript-eslint/eslint-plugin": "^8.46.4",
-    "@typescript-eslint/parser": "^8.46.4",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
+    "jsdom": "^27.2.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.4"
+    "typescript-eslint": "^8.47.0",
+    "vitest": "^4.0.10"
   },
   "scripts": {
     "app": "yarn workspace @web-art/app",
@@ -37,7 +39,7 @@
     "build": "yarn workspaces foreach -Avpt --exclude @web-art/root run build",
     "typecheck": "yarn workspaces foreach -Avpt --exclude @web-art/root run typecheck",
     "lint": "yarn workspaces foreach -Avpt --exclude @web-art/root run lint",
-    "test": "yarn workspaces foreach -Avpt --exclude @web-art/root run test",
+    "test": "vitest run --config vitest.config.js",
     "findissues": "yarn workspaces foreach -Avpt --exclude @web-art/root run findissues",
     "prepublish": "yarn workspaces foreach -Avpt --exclude @web-art/root run prepublish"
   }
