--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,26 +15,22 @@
   "devDependencies": {
     "@stylistic/eslint-plugin": "^5.5.0",
     "@types/eslint": "^9.6.1",
-    "@typescript-eslint/eslint-plugin": "^8.46.4",
-    "@typescript-eslint/parser": "^8.46.4",
+    "@typescript-eslint/eslint-plugin": "^8.47.0",
+    "@typescript-eslint/parser": "^8.47.0",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
-    "jsdom": "^27.2.0",
     "prettier": "^3.6.2",
     "strip-ansi": "^7.1.2",
-    "ts-loader": "^9.5.4",
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.9"
+    "typescript": "^5.9.3"
   },
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
     "lint": "eslint ./src/**/*.ts",
-    "test": "vitest run --passWithNoTests --max-workers 1 --reporter verbose --environment jsdom",
     "findissues": "yarn typecheck && yarn lint",
-    "prepublish": "yarn typecheck && yarn lint && yarn test && yarn build"
+    "prepublish": "yarn typecheck && yarn lint && yarn build"
   }
 }
