--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -10,14 +10,16 @@ jobs:
           node-version: 22.2.0
       - name: Install dependencies
         run: yarn
-      - name: Build bundle
+      - name: Build
         env:
           NODE_ENV: production
         run: yarn build
-      - name: Finding Issues
-        run: yarn findissues
-      - name: Testing
-        run: yarn test
+      - name: Typecheck
+        run: yarn typecheck
+      - name: Lint
+        run: yarn lint
+      # - name: Test
+      #   run: yarn test
       - name: Deploy
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
