--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "jsdom": "^27.2.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.47.0",
-    "vitest": "^4.0.10"
+    "vitest": "4.0.13"
   },
   "scripts": {
     "app": "yarn workspace @web-art/app",
