Trying to get github actions to cache the deps

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 25.4.0
+          cache: yarn
       - name: Install dependencies
         run: yarn
       - name: Build
