--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -10,21 +10,21 @@
   "types": "dist/index.d.ts",
   "version": "1.0.0",
   "dependencies": {
-    "@web-art/config-parser": "^workspace:",
-    "@web-art/core": "^workspace:",
     "@web-art/linear-algebra": "^workspace:",
     "@web-art/profile": "^workspace:",
-    "deep-guards": "^1.3.1"
+    "deep-guards": "^1.3.1",
+    "niall-utils": "1.0.0",
+    "seriform": "1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.29.0",
     "@babel/preset-env": "^7.29.0",
     "@babel/preset-typescript": "^7.28.5",
-    "@stylistic/eslint-plugin": "^5.8.0",
+    "@stylistic/eslint-plugin": "^5.9.0",
     "@types/eslint": "^9.6.1",
     "@types/gh-pages": "^6.1.0",
-    "@typescript-eslint/eslint-plugin": "^8.55.0",
-    "@typescript-eslint/parser": "^8.55.0",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
     "babel-loader": "^10.0.0",
     "browser-sync": "^3.0.4",
     "browser-sync-webpack-plugin": "^2.4.0",
