--- a/packages/profile/package.json
+++ b/packages/profile/package.json
@@ -10,14 +10,14 @@
   "types": "dist/index.d.ts",
   "version": "1.0.0",
   "dependencies": {
-    "@web-art/core": "^workspace:",
-    "deep-guards": "^1.3.1"
+    "deep-guards": "^1.3.1",
+    "niall-utils": "1.0.0"
   },
   "devDependencies": {
-    "@stylistic/eslint-plugin": "^5.8.0",
+    "@stylistic/eslint-plugin": "^5.9.0",
     "@types/eslint": "^9.6.1",
-    "@typescript-eslint/eslint-plugin": "^8.55.0",
-    "@typescript-eslint/parser": "^8.55.0",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-eslint-comments": "^3.2.0",
