--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   ],
   "devDependencies": {
     "@eslint/compat": "^2.0.2",
-    "@eslint/js": "^9.39.2",
+    "@eslint/js": "^9.39.3",
     "@stylistic/eslint-plugin": "^5.9.0",
     "@types/eslint__js": "^9.14.0",
-    "@typescript-eslint/eslint-plugin": "^8.56.0",
-    "@typescript-eslint/parser": "^8.56.0",
-    "eslint": "^9.39.2",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
+    "eslint": "^9.39.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.32.0",
@@ -28,8 +28,8 @@
     "jsdom": "^28.1.0",
     "prettier": "^3.8.1",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.56.0",
-    "vitest": "4.0.18"
+    "typescript-eslint": "^8.56.1",
+    "vitest": "^4.0.18"
   },
   "scripts": {
     "app": "yarn workspace @web-art/app",
