--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,8 +13,8 @@
     "@web-art/linear-algebra": "^workspace:",
     "@web-art/profile": "^workspace:",
     "deep-guards": "^1.3.1",
-    "niall-utils": "1.0.0",
-    "seriform": "1.0.0"
+    "niall-utils": "^1.0.0",
+    "seriform": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.29.0",
@@ -23,24 +23,24 @@
     "@stylistic/eslint-plugin": "^5.9.0",
     "@types/eslint": "^9.6.1",
     "@types/gh-pages": "^6.1.0",
-    "@typescript-eslint/eslint-plugin": "^8.56.0",
-    "@typescript-eslint/parser": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
     "babel-loader": "^10.0.0",
     "browser-sync": "^3.0.4",
     "browser-sync-webpack-plugin": "^2.4.0",
     "bs-fullscreen-message": "^1.1.0",
-    "eslint": "^9.39.2",
+    "eslint": "^9.39.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.5",
     "gh-pages": "^6.3.0",
     "prettier": "^3.8.1",
-    "strip-ansi": "^7.1.2",
+    "strip-ansi": "^7.2.0",
     "terser-webpack-plugin": "^5.3.16",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
-    "webpack": "^5.105.2",
+    "webpack": "^5.105.3",
     "webpack-cli": "^6.0.1",
     "webpack-dev-middleware": "^7.4.5"
   },
