--- a/packages/linear-algebra/package.json
+++ b/packages/linear-algebra/package.json
@@ -11,20 +11,20 @@
   "version": "1.0.0",
   "dependencies": {
     "deep-guards": "^1.3.1",
-    "niall-utils": "1.0.0"
+    "niall-utils": "^1.0.0"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "^5.9.0",
     "@types/eslint": "^9.6.1",
-    "@typescript-eslint/eslint-plugin": "^8.56.0",
-    "@typescript-eslint/parser": "^8.56.0",
-    "eslint": "^9.39.2",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
+    "eslint": "^9.39.3",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.5",
     "prettier": "^3.8.1",
-    "strip-ansi": "^7.1.2",
+    "strip-ansi": "^7.2.0",
     "typescript": "^5.9.3"
   },
   "scripts": {
