--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,6 +2,6 @@ compressionLevel: mixed
 
 enableGlobalCache: false
 
-nodeLinker: node-modules
+nodeLinker: pnp
 
 yarnPath: .yarn/releases/yarn-4.12.0.cjs
