--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@eslint/js": "^9.39.3",
     "@stylistic/eslint-plugin": "^5.9.0",
     "@types/eslint__js": "^9.14.0",
+    "@types/node": "^25.3.2",
     "@typescript-eslint/eslint-plugin": "^8.56.1",
     "@typescript-eslint/parser": "^8.56.1",
     "eslint": "^9.39.3",
