--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,6 +23,7 @@
     "@stylistic/eslint-plugin": "^5.9.0",
     "@types/eslint": "^9.6.1",
     "@types/gh-pages": "^6.1.0",
+    "@types/node": "^25.3.2",
     "@typescript-eslint/eslint-plugin": "^8.56.1",
     "@typescript-eslint/parser": "^8.56.1",
     "babel-loader": "^10.0.0",
