--- a/packages/profile/package.json
+++ b/packages/profile/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@stylistic/eslint-plugin": "^5.9.0",
     "@types/eslint": "^9.6.1",
+    "@types/node": "^25.3.2",
     "@typescript-eslint/eslint-plugin": "^8.56.1",
     "@typescript-eslint/parser": "^8.56.1",
     "eslint": "^9.39.3",
@@ -25,7 +26,8 @@
     "eslint-plugin-prettier": "^5.5.5",
     "prettier": "^3.8.1",
     "strip-ansi": "^7.2.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   },
   "scripts": {
     "build": "tsc",
